stop cards from shifting after some of them are removed

--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ body {
     /* AAAAAAAAAAAAAAAAAAAAAAAAAAAa */
 }
 
+.removed-card{
+  visibility: hidden;
+}
+
 .card-container {
     perspective: 600px;
     margin: 10px;
